--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,15 @@
 ---
+// src/pages/Index.astro
+import Footer from "../components/Footer.astro";
 import Layout from "../layouts/Layout.astro";
-import Experiencia from "../sections/Experiencia.astro";
 import Header from "../sections/Header.astro";
 import MyTecnologies from "../sections/MyTecnologies.astro";
+import Projects from "../sections/Projects.astro";
 ---
 
 <Layout title="Inicio">
-  <Header />
-  <MyTecnologies/>
-</Layout>
+    <Header />
+    <MyTecnologies />
+    <Projects />
+
+  </Layout>
