--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+// src/pages/index.astro
 interface Props {
   title: string;
 }
@@ -10,6 +11,7 @@ import "@fontsource/roboto/400.css";
 import "@fontsource/roboto/500.css";
 import "@fontsource/roboto/700.css";
 import "@fontsource/roboto/900.css";
+import Footer from "../components/Footer.astro";
 ---
 
 <!doctype html>
@@ -24,29 +26,21 @@ import "@fontsource/roboto/900.css";
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
-    <style>
-      /* Fondo inicial con gradiente radial */
-      body {
-        background: radial-gradient(63% 63% at 48% -20%, #000a6c 1%, #080811 100%);
-        transition: background 4s ease; /* Transición suave y lenta para el fondo */
-      }
-    </style>
+   
   </head>
-  <body class="font-sans max-w-[1100px] m-auto inset-0 -z-10 items-center px-5 py-24 relative">
+  <body class=" overflow-x-hidden m-auto  bg-[#1a2a3b text-white py-12 mt-8 w-full bg-[radial-gradient(63%_63%_at_48%_20%,_#000a6c_1%,_#080811_100%)]">
     <div class="relative h-full w-full bg-slate-950">
       <!-- Gradientes en la parte superior -->
       <div class="absolute bottom-0 left-[-20%] right-0 top-[-10%] h-[500px] w-[500px] rounded-full bg-[radial-gradient(circle_farthest-side,rgba(255,0,182,.15),rgba(255,255,255,0))]"></div>
       <div class="absolute bottom-0 right-[-20%] top-[-10%] h-[500px] w-[500px] rounded-full bg-[radial-gradient(circle_farthest-side,rgba(255,0,182,.15),rgba(255,255,255,0))]"></div>
     </div>
 
-    <!-- Gradientes en la parte inferior -->
-    <div class="absolute bottom-[-5%] left-[-20%] right-0 h-[500px] w-[500px] rounded-full bg-[radial-gradient(circle_farthest-side,rgba(255,0,182,.10),rgba(255,255,255,0))]"></div>
-    <div class="absolute bottom-[-5%] right-[-20%] top-[-10%] h-[500px] w-[500px] rounded-full bg-[radial-gradient(circle_farthest-side,rgba(255,0,182,.10),rgba(255,255,255,0))]"></div>
-
-    <main class="max-w-[1100px] m-auto">
+    <main class=" m-auto max-w-[1280px] " >
       <slot />
     </main>
-
+    <Footer/>
+    
+    
     <script>
       // Función para cambiar el fondo cuando se llega al final del scroll
       function changeBackgroundOnScroll() {
@@ -57,7 +51,7 @@ import "@fontsource/roboto/900.css";
 
         // Si el scroll está al final de la página, cambiamos el color
         if (scrollPercent > 0.8) { // Cuando el scroll llega al 80% de la página
-          document.body.style.background = "radial-gradient(63% 63% at 48% -20%, #003366 1%, #010d1a 100%)";  // Azul más oscuro y sutil
+          document.body.style.background = "radial-gradient(63% 63% at 48% -20%, #003366 1%, #080811 100%)";  // Azul más oscuro y sutil
         } else {
           // Si no hemos llegado al final, mantenemos el gradiente original
           document.body.style.background = "radial-gradient(63% 63% at 48% -20%, #000a6c 1%, #080811 100%)";
@@ -69,3 +63,13 @@ import "@fontsource/roboto/900.css";
     </script>
   </body>
 </html>
+
+ <style>
+      /* Fondo inicial con gradiente radial */
+      body {
+       
+        transition: background 4s ease; /* Transición suave y lenta para el fondo */
+      }
+
+
+    </style>
