--- a/src/sections/MyTecnologies.astro
+++ b/src/sections/MyTecnologies.astro
@@ -1,11 +1,7 @@
-<main
-  class="min-h-screen bg-[#f0f0f010] p-8 font-sans"
->
+<main class="min-h-screen bg-[#f0f0f010] p-8 font-sans mt-28">
   <!-- Header -->
   <header class="text-center mb-16">
-    <h1
-      class="text-5xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-blue-500 to-purple-600"
-    >
+    <h1 class="text-5xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-blue-500 to-purple-600">
       Mi Stack de Tecnologías
     </h1>
     <p class="mt-4 text-lg text-gray-400">
@@ -53,9 +49,7 @@
         <p class="tech-name">Astro</p>
       </div>
       <div class="tech-card">
-     
         <i class="devicon-axios-plain colored text-7xl"></i>
-          
         <p class="tech-name">Axios</p>
       </div>
       <div class="tech-card">
@@ -70,7 +64,6 @@
         <i class="devicon-bootstrap-plain colored text-6xl"></i>
         <p class="tech-name">Bootstrap</p>
       </div>
-    
     </div>
   </section>
 
@@ -98,10 +91,8 @@
       </div>
       <div class="tech-card">
         <i class="devicon-sqlite-plain colored text-6xl"></i>
-
         <p class="tech-name">Sqlite</p>
       </div>
-
       <div class="tech-card">
         <i class="devicon-java-plain colored text-6xl"></i>
         <p class="tech-name">Java</p>
@@ -129,12 +120,10 @@
       </div>
       <div class="tech-card">
         <i class="devicon-insomnia-plain colored text-6xl"></i>
-
         <p class="tech-name">Insomia</p>
       </div>
       <div class="tech-card">
         <i class="devicon-materialui-plain colored text-6xl"></i>
-
         <p class="tech-name">MUI</p>
       </div>
       <div class="tech-card">
@@ -161,5 +150,24 @@
   }
   .tech-card:hover {
     transform: scale(1.1);
+  }
+
+  @media (max-width: 768px) {
+    .tech-card {
+      width: 100%;
+      margin: 10px 0;
+    }
+    .tech-name {
+      font-size: 0.875rem; /* Reduce size for mobile */
+    }
+    .text-6xl {
+      font-size: 3rem; /* Adjust icon size for mobile */
+    }
+    h2 {
+      font-size: 2rem;
+    }
+    .text-center {
+      text-align: center;
+    }
   }
 </style>
