--- a/src/sections/Presentacion.astro
+++ b/src/sections/Presentacion.astro
@@ -1,4 +1,4 @@
-<main class="flex justify-center items-center gap-8 bg-gray-900 p-10 flex-col lg:flex-row">
+<main class="flex justify-center items-center gap-8 bg-gray-900 p-10 flex-col lg:flex-row "  data-aos="fade-left" data-aos-duration="1000">
   <!-- Imagen de perfil -->
   <img
     src="https://static.vecteezy.com/system/resources/previews/005/005/788/non_2x/user-icon-in-trendy-flat-style-isolated-on-grey-background-user-symbol-for-your-web-site-design-logo-app-ui-illustration-eps10-free-vector.jpg"
