--- a/src/sections/Experiencia.astro
+++ b/src/sections/Experiencia.astro
@@ -1,5 +1,5 @@
 
-<section class="mt-48">
+<section class="mt-48"  data-aos="fade-right" data-aos-duration="1000">
   <ol class="relative border-s border-gray-200 dark:border-gray-700">
     <li class="mb-10 ms-6">
       <span
