--- a/src/sections/MyTecnologies.astro
+++ b/src/sections/MyTecnologies.astro
@@ -1,4 +1,4 @@
-<main class="min-h-screen bg-[#f0f0f010] p-8 font-sans mt-28">
+<main class="min-h-screen bg-[#f0f0f010] p-8 font-sans mt-28" >
   <!-- Header -->
   <header class="text-center mb-16">
     <h1 class="text-5xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-blue-500 to-purple-600">
@@ -10,7 +10,7 @@
   </header>
 
   <!-- Frontend Section -->
-  <section id="frontend" class="mb-16 mt-16">
+  <section id="frontend" class="mb-16 mt-16" data-aos="fade-left" data-aos-duration="1000">
     <h2 class="text-4xl font-extrabold mb-8 text-center text-white">
       Frontend
     </h2>
@@ -68,7 +68,7 @@
   </section>
 
   <!-- Backend Section -->
-  <section id="backend" class="mb-16">
+  <section id="backend" class="mb-16" data-aos="fade-right" data-aos-duration="1000">
     <h2 class="text-4xl font-extrabold mb-8 text-center text-green-400">
       Backend
     </h2>
@@ -105,7 +105,7 @@
   </section>
 
   <!-- Tools Section -->
-  <section id="tools" class="mb-16">
+  <section id="tools" class="mb-16" data-aos="fade-left" data-aos-duration="1000">
     <h2 class="text-4xl font-extrabold mb-8 text-center text-yellow-400">
       Tools
     </h2>
