--- a/src/sections/Projects.astro
+++ b/src/sections/Projects.astro
@@ -7,8 +7,9 @@ const projects = [
       "Replica funcional de Netflix utilizando la API de TMDB con más de 45000 películas y 5000 series. Incluye características como un deslizador visual, buscador integrado, paginación optimizada y una sección de detalles con información completa sobre cada contenido: título, sinopsis, calificación, tráiler, elenco y más. Un proyecto ideal para explorar funcionalidades avanzadas en aplicaciones web.",
     imageSrc: "src/assets/544shots_so.png",
     technologies: ["React", "JavaScript", "TailwindCSS", "JSON", "Swiper"],
-    githubLink: "src/assets/610shots_so.png",
+    githubLink: "https://github.com/BernardoPer19/Web-Peliculas",
     liveLink: "https://miwebsite.com/proyecto1",
+    scroll: "left"
   },
   {
     title: "E-commerce de Comidas",
@@ -16,8 +17,10 @@ const projects = [
       "Aplicación e-commerce para restaurantes que integra tres APIs diferentes para mostrar cócteles, platos principales y postres. Permite a los usuarios explorar el menú, añadir productos al carrito, marcarlos como favoritos y filtrar por categoría. Un proyecto diseñado para ofrecer una experiencia fluida y atractiva al usuario.",
     imageSrc: "src/assets/684shots_so.png",
     technologies: ["React", "JavaScript", "TypeScript", "JSON", "TailwindCSS"],
-    githubLink: "https://github.com/miusuario/proyecto2",
+    githubLink: "https://github.com/BernardoPer19/WebComidas",
     liveLink: "https://miwebsite.com/proyecto2",
+    scroll: "right"
+
   },
   {
     title: "E-commerce de Supermercado",
@@ -25,8 +28,10 @@ const projects = [
       "Tienda en línea construida con Next.js para aprovechar SSR y CSR, mejorando tanto el SEO como el rendimiento. Ofrece filtrado de productos por precio y categoría, además de una navegación dinámica con detalles individuales para cada artículo. Incluye un carrito de compras totalmente funcional. Próximas mejoras: integración de métodos de pago con Strapi, autenticación segura con NextAuth y Base de datos en SQLite con Prisma ORM.",
     imageSrc: "src/assets/610shots_so.png",
     technologies: ["NextJS", "TypeScript", "TailwindCSS", "Axios", "JSON"],
-    githubLink: "https://github.com/miusuario/proyecto3",
+    githubLink: "https://github.com/BernardoPer19/E-comerce-NEXT-TS",
     liveLink: "https://miwebsite.com/proyecto3",
+    scroll: "left"
+    
   },
   {
     title: "Blog de Usuarios",
@@ -40,8 +45,10 @@ const projects = [
       "TailwindCSS",
       "Firebase",
     ],
-    githubLink: "src/assets/676shots_so.png",
+    githubLink: "https://github.com/BernardoPer19/User-Blog-TSX",
     liveLink: "https://miwebsite.com/proyecto1",
+    scroll: "right"
+
   },
   {
     title: "Landing Page para Empresa de Abogados",
@@ -49,17 +56,19 @@ const projects = [
       "Landing page diseñada para una empresa de abogados, optimizada con Astro para mejorar el SEO y garantizar tiempos de carga rápidos. La página incluye navegación dinámica, permitiendo a los usuarios acceder a diferentes secciones de manera sencilla. Además, se ha integrado un sistema de gestión de formularios en React para facilitar la interacción con los visitantes, como solicitudes de consultas o contacto. Un proyecto enfocado en la eficiencia y la accesibilidad para brindar una experiencia fluida al usuario.",
     imageSrc: "src/assets/269shots_so.png",
     technologies: ["Astro", "React", "TailwindCSS", "TypeScript"],
-    githubLink: "https://github.com/miusuario/proyecto3",
+    githubLink: "https://github.com/BernardoPer19/WebAbog",
     liveLink: "https://miwebsite.com/proyecto3",
   },
   {
-    title: "Landing Page Optimizada",
+    title: "Landing Page pora empresa digital",
     description:
       "Landing page desarrollada con Astro para garantizar un SEO eficiente y un rendimiento rápido. Las secciones interactivas utilizan React, combinando funcionalidad con diseño atractivo. Ideal para empresas que buscan una presencia web moderna y optimizada.",
     imageSrc: "src/assets/522shots_so.png",
     technologies: ["Astro", "React", "JavaScript", "TailwindCSS"],
-    githubLink: "https://github.com/miusuario/proyecto3",
+    githubLink: "https://github.com/BernardoPer19/Landing-Empresa-Digital",
     liveLink: "https://miwebsite.com/proyecto3",
+    scroll: "right"
+
   },
 ];
 ---
@@ -76,6 +85,7 @@ const projects = [
           technologies={project.technologies}
           githubLink={project.githubLink}
           liveLink={project.liveLink}
+          scroll={project.scroll}
         />
       ))
     }
