--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ import SobreMi from "../sections/SobreMi.astro";
 import ContactForm from "./ContactForm.astro";
 ---
 
-<div class="flex flex-col h-[50vh] bg-[#1a2a3b] py-12 mt-8 bg-[radial-gradient(103%_103%_at_50%_100%,_#000a6c_40%,_#080811_100%)]">
+<div class="flex flex-col h-[50vh] bg-[#1a1a1a] mt-16">
 
   <!-- Sección SobreMi -->
   <!-- <SobreMi /> -->
