--- a/src/sections/Header.astro
+++ b/src/sections/Header.astro
@@ -5,7 +5,8 @@ import MyTecnologies from "./MyTecnologies.astro";
 ---
 
 <header
+class="w-full h-screen
+m-auto flex items-center"
 >
   <Presentacion />
-  <Experiencia />
 </header>
