--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,19 +34,9 @@ import 'aos/dist/aos.css';
     <title>{title}</title>
   </head>
   <body
-    class="overflow-x-hidden m-auto bg-[#1a2a3b text-white py-12 mt-8 w-full bg-[radial-gradient(63%_63%_at_48%_20%,_#000a6c_1%,_#080811_100%)]"
+  class="bg-[#131212]"
   >
-    <div class="relative h-full w-full bg-slate-950">
-      <!-- Gradientes en la parte superior -->
-      <div
-        class="absolute bottom-0 left-[-20%] right-0 top-[-10%] h-[500px] w-[500px] rounded-full bg-[radial-gradient(circle_farthest-side,rgba(255,0,182,.15),rgba(255,255,255,0))]"
-      >
-      </div>
-      <div
-        class="absolute bottom-0 right-[-20%] top-[-10%] h-[500px] w-[500px] rounded-full bg-[radial-gradient(circle_farthest-side,rgba(255,0,182,.15),rgba(255,255,255,0))]"
-      >
-      </div>
-    </div>
+   
 
     <main class="m-auto max-w-[1280px]">
       <slot />
