--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,14 +2,17 @@
 // src/pages/Index.astro
 import Footer from "../components/Footer.astro";
 import Layout from "../layouts/Layout.astro";
+import Experiencia from "../sections/Experiencia.astro";
 import Header from "../sections/Header.astro";
 import MyTecnologies from "../sections/MyTecnologies.astro";
 import Projects from "../sections/Projects.astro";
+import SobreMi from "../sections/SobreMi.astro";
 ---
 
 <Layout title="Inicio">
-    <Header />
-    <MyTecnologies />
-    <Projects />
-
-  </Layout>
+  <Header />
+  <SobreMi />
+  <Experiencia />
+  <MyTecnologies />
+  <Projects />
+</Layout>
