--- a/src/sections/Presentacion.astro
+++ b/src/sections/Presentacion.astro
@@ -1,29 +1,66 @@
-<main class="flex justify-center items-center gap-8 bg-gray-900 p-10 flex-col lg:flex-row "  data-aos="fade-left" data-aos-duration="1000">
-  <!-- Imagen de perfil -->
-  <img
-    src="https://static.vecteezy.com/system/resources/previews/005/005/788/non_2x/user-icon-in-trendy-flat-style-isolated-on-grey-background-user-symbol-for-your-web-site-design-logo-app-ui-illustration-eps10-free-vector.jpg"
-    alt="Imagen de perfil"
-    class="size-48 rounded-full mb-8 lg:mb-0"
-  />
-  
-  <!-- Contenedor de texto -->
+<main
+  class="flex justify-center px-24 w-[800px] h-[700px] items-center gap-10 bg-[#252525] flex-col lg:flex-row m-auto rounded-xl"
+  data-aos="fade-left"
+  data-aos-duration="3000"
+>
   <div class="flex flex-col gap-5 text-white text-center lg:text-left">
-    <h1 class="text-4xl font-bold text-blue-600">
-      Hola, soy <span class="text-blue-400">Agustín Bernardo Peredo Rodríguez</span>, tu desarrollador <span class="font-semibold">frontend freelance</span>
+    <h1
+      class="text-4xl font-bold text-center"
+      data-aos="fade-left"
+      data-aos-easing="linear"
+      data-aos-duration="2000"
+    >
+      Hola, soy <span class="text-green-400">Agustín Peredo </span> desarrollador
+      <span class="font-semibold text-green-600">frontend freelance</span>
     </h1>
-    <p class="font-medium text-lg">
-      Con <span class="font-semibold text-blue-400">19 años</span> y más de <span class="font-semibold text-blue-400">8 meses de experiencia</span> en el desarrollo de aplicaciones web, me especializo en crear soluciones <span class="text-blue-500">interactivas</span>, <span class="text-blue-500">escalables</span> y <span class="text-blue-500">modernas</span>. Mi objetivo es ayudar a <span class="font-semibold text-blue-400">startups</span> y empresas a llevar sus proyectos al siguiente nivel, ofreciendo soluciones a medida que mejoren la experiencia del usuario.
+    <p
+      class="font-medium text-lg text-center"
+      data-aos="fade-left"
+      data-aos-easing="linear"
+      data-aos-duration="2000"
+    >
+      Con <span class="font-semibold text-green-400">19 años</span> y más de <span
+        class="font-semibold text-green-400">8 meses de experiencia</span
+      > en el desarrollo de aplicaciones web, me especializo en crear soluciones
+      <span class="text-green-500">interactivas</span>, <span
+        class="text-green-500">escalables</span
+      > y <span class="text-green-500">modernas</span>. Mi objetivo es ayudar a <span
+        class="font-semibold text-green-400">startups</span
+      > y empresas a llevar sus proyectos al siguiente nivel, ofreciendo soluciones
+      a medida que mejoren la experiencia del usuario.
     </p>
-    <p class="font-medium text-lg">
-      Como freelancer, me enfoco en entregar <span class="font-semibold text-blue-400">resultados rápidos</span> y <span class="font-semibold text-blue-400">eficientes</span>, adaptándome a las necesidades específicas de cada cliente. Si estás buscando un desarrollador que pueda ayudarte a materializar tus ideas de manera <span class="text-blue-500">profesional</span> y <span class="text-blue-500">ágil</span>, ¡estoy aquí para hacerlo realidad!
-    </p>
-    <div class="flex items-center justify-center gap-4 mt-5 lg:justify-start">
-      <button class="px-6 py-3 bg-white text-blue-900 rounded-md hover:bg-blue-100">Descargar CV</button>
-      <a href="https://github.com/BernardoPer19?tab=overview&from=2025-01-01&to=2025-01-11" target="_blank">
-        <i class="fa-brands fa-github text-white text-3xl cursor-pointer hover:text-blue-400"></i>
+    <!-- <p class="font-medium text-lg">
+      Como freelancer, me enfoco en entregar <span class="font-semibold text-green-400">resultados rápidos</span> y <span class="font-semibold text-green-400">eficientes</span>, adaptándome a las necesidades específicas de cada cliente. Si estás buscando un desarrollador que pueda ayudarte a materializar tus ideas de manera <span class="text-green-500">profesional</span> y <span class="text-green-500">ágil</span>, ¡estoy aquí para hacerlo realidad!
+    </p> -->
+    <div class="flex items-center justify-center gap-4 mt-5 lg:justify-center">
+      <button
+        class="px-6 py-3 bg-white text-green-900 rounded-md hover:bg-green-100"
+        data-aos="fade-up"
+        data-aos-easing="linear"
+        data-aos-duration="1200">Descargar CV</button
+      >
+      <a
+        href="https://github.com/BernardoPer19?tab=overview&from=2025-01-01&to=2025-01-11"
+        target="_blank"
+        data-aos="fade-up"
+        data-aos-easing="linear"
+        data-aos-duration="1250"
+      >
+        <i
+          class="fa-brands fa-github text-white text-3xl cursor-pointer hover:text-green-400"
+        ></i>
       </a>
-      <i class="fa-brands fa-whatsapp text-white text-3xl cursor-pointer hover:text-blue-400"></i>
-      <i class="fa-solid fa-envelope  text-white text-3xl cursor-pointer hover:text-blue-400"></i>
+      <i
+        class="fa-brands fa-whatsapp text-white text-3xl cursor-pointer hover:text-green-400"
+        data-aos="fade-up"
+        data-aos-easing="linear"
+        data-aos-duration="1300"></i>
+      <i
+        data-aos="fade-up"
+        data-aos-easing="linear"
+        data-aos-duration="1350"
+        class="fa-solid fa-envelope text-white text-3xl cursor-pointer hover:text-green-400"
+      ></i>
     </div>
   </div>
 </main>
@@ -39,7 +76,7 @@
       height: 96px;
     }
   }
-  
+
   @media (max-width: 768px) {
     .text-4xl {
       font-size: 2.5rem; /* Ajustar tamaño del título */
@@ -52,7 +89,7 @@
       height: 72px;
     }
   }
-  
+
   @media (max-width: 480px) {
     .gap-8 {
       gap: 4px; /* Reducir el espacio entre elementos en pantallas más pequeñas */
