--- a/src/sections/SobreMi.astro
+++ b/src/sections/SobreMi.astro
@@ -1,18 +1,44 @@
-<section class="flex flex-col md:flex-row items-center justify-center gap-8 py-12 max-w-[1280px] m-auto">
+<section
+  class="flex md:flex-row-reverse items-center justify-center flex-row-reverse max-w-[1280px] m-auto"
+>
   <!-- Contenedor del texto -->
-  <div class="w-full md:w-1/2 space-y-4 text-center md:text-left">
+  <div
+    class="w-full md:w-1/2 space-y-4 text-center md:text-left"
+    data-aos="fade-right"
+    data-aos-easing="linear"
+    data-aos-duration="1200"
+  >
     <h2 class="text-3xl font-semibold text-white">Sobre mí</h2>
     <p class="text-lg text-gray-300">
-      Hola, soy Agustín. Soy un desarrollador apasionado por el frontend, la creación de aplicaciones web y la tecnología en general. Me gusta resolver problemas complejos y construir soluciones intuitivas y escalables. Mi objetivo es seguir aprendiendo y desarrollando proyectos innovadores que puedan ayudar a las personas. Estoy constantemente explorando nuevas tecnologías y herramientas para mejorar mis habilidades y alcanzar mis metas profesionales.
+      Hola, soy Agustín. Soy un desarrollador apasionado por el frontend, la
+      creación de aplicaciones web y la tecnología en general. Me gusta resolver
+      problemas complejos y construir soluciones intuitivas y escalables. Mi
+      objetivo es seguir aprendiendo y desarrollando proyectos innovadores que
+      puedan ayudar a las personas. Estoy constantemente explorando nuevas
+      tecnologías y herramientas para mejorar mis habilidades y alcanzar mis
+      metas profesionales.
     </p>
-    <a href="https://github.com/agustinperedo" target="_blank" class="flex items-center space-x-2 text-white hover:text-green-400 transition-colors duration-300">
+    <a
+      href="https://github.com/agustinperedo"
+      target="_blank"
+      class="flex items-center space-x-2 text-white hover:text-green-400 transition-colors duration-300"
+    >
       <i class="fab fa-github text-2xl"></i>
       <span>Visítame en GitHub</span>
     </a>
   </div>
-  
+
   <!-- Contenedor de la imagen -->
-  <div class="w-full md:w-1/2 flex justify-center">
-    <img src="https://www.nicepng.com/png/detail/128-1280406_view-user-icon-png-user-circle-icon-png.png" alt="Imagen de perfil" class="z-30 w-32 h-32 rounded-full object-cover border-4 border-white" />
+  <div
+    class="w-full md:w-96 flex justify-center"
+    data-aos="fade-right"
+    data-aos-easing="linear"
+    data-aos-duration="1000"
+  >
+    <img
+      src="https://www.nicepng.com/png/detail/128-1280406_view-user-icon-png-user-circle-icon-png.png"
+      alt="Imagen de perfil"
+      class="z-30 w-48 h-48 rounded-full object-cover border-4 border-white"
+    />
   </div>
 </section>
