--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Projects from "../sections/Projects.astro";
 import SobreMi from "../sections/SobreMi.astro";
 ---
 
-<Layout title="Inicio">
+<Layout title="Inicio Agustin Bernardo Desarrollador Frontent en React Y Typescript">
   <Header />
   <SobreMi />
   <Experiencia />
