--- a/src/sections/Projects.astro
+++ b/src/sections/Projects.astro
@@ -60,7 +60,7 @@ const projects = [
     liveLink: "https://miwebsite.com/proyecto3",
   },
   {
-    title: "Landing Page pora empresa digital",
+    title: "Landing Page para empresa digital",
     description:
       "Landing page desarrollada con Astro para garantizar un SEO eficiente y un rendimiento rápido. Las secciones interactivas utilizan React, combinando funcionalidad con diseño atractivo. Ideal para empresas que buscan una presencia web moderna y optimizada.",
     imageSrc: "src/assets/522shots_so.png",
