--- a/src/sections/Experiencia.astro
+++ b/src/sections/Experiencia.astro
@@ -1,5 +1,4 @@
-
-<section class="mt-48"  data-aos="fade-right" data-aos-duration="1000">
+<section class="mt-48" data-aos="fade-right" data-aos-duration="1000">
   <ol class="relative border-s border-gray-200 dark:border-gray-700">
     <li class="mb-10 ms-6">
       <span
@@ -36,7 +35,8 @@
         la experiencia para los usuarios finales.
       </p>
       <a
-        href="#"
+        href="src/assets/Bicidatos_BPR.pdf"
+        download
         class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"
         ><svg
           class="w-3.5 h-3.5 me-2.5"
@@ -52,7 +52,7 @@
             d="M18 12h-2.55l-2.975 2.975a3.5 3.5 0 0 1-4.95 0L4.55 12H2a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-4a2 2 0 0 0-2-2Zm-3 5a1 1 0 1 1 0-2 1 1 0 0 1 0 2Z"
           ></path>
         </svg>
-        Descargar ZIP</a
+        Descargar Certificado</a
       >
     </li>
     <li class="mb-10 ms-6">
@@ -111,6 +111,4 @@
       </h3>
     </li>
   </ol>
-
-
 </section>
