--- a/src/sections/MyTecnologies.astro
+++ b/src/sections/MyTecnologies.astro
@@ -10,145 +10,122 @@
   </header>
 
   <!-- Frontend Section -->
-  <div class="flex flex-wrap justify-center items-center">
-    <section
-      id="frontend"
-      class="mb-16 mt-16 w-[600px]"
-      data-aos="fade-left"
-      data-aos-duration="1000"
-    >
-      <h2 class="text-4xl font-extrabold mb-8 text-center text-white">
-        Frontend
-      </h2>
-      <div class="flex gap-10 flex-wrap justify-center justify-items-center">
-        <!-- Icons -->
-        <div class="tech-card">
-          <i class="devicon-html5-plain text-6xl"></i>
-          <p class="tech-name">HTML5</p>
-        </div>
-        <div class="tech-card">
-          <i class="devicon-css3-plain-wordmark text-6xl"></i>
-          <p class="tech-name">CSS3</p>
-        </div>
-        <div class="tech-card">
-          <i class="devicon-tailwindcss-plain text-6xl"></i>
-          <p class="tech-name">TailwindCSS</p>
-        </div>
-        <div class="tech-card">
-          <i class="devicon-javascript-plain text-6xl"></i>
-          <p class="tech-name">JavaScript</p>
-        </div>
-        <div class="tech-card">
-          <i class="devicon-typescript-plain text-6xl"></i>
-          <p class="tech-name">TypeScript</p>
-        </div>
-        <div class="tech-card">
-          <i class="devicon-react-original text-6xl"></i>
-          <p class="tech-name">React</p>
-        </div>
-        <div class="tech-card">
-          <i class="devicon-nextjs-plain text-6xl"></i>
-          <p class="tech-name">Next.js</p>
-        </div>
-        <div class="tech-card">
-          <i class="devicon-astro-plain text-6xl"></i>
-          <p class="tech-name">Astro</p>
-        </div>
-        <div class="tech-card">
-          <i class="devicon-axios-plain text-7xl"></i>
-          <p class="tech-name">Axios</p>
-        </div>
-        <div class="tech-card">
-          <i class="devicon-reactrouter-plain text-6xl"></i>
-          <p class="tech-name">React Router</p>
-        </div>
-        <div class="tech-card">
-          <i class="devicon-bootstrap-plain text-6xl"></i>
-          <p class="tech-name">Bootstrap</p>
-        </div>
+  <section id="frontend" class="mb-16 w-full max-w-screen-lg mx-auto" data-aos="fade-left" data-aos-duration="1000">
+    <h2 class="text-4xl font-extrabold mb-8 text-center text-white">Frontend</h2>
+    <div class="flex gap-10 flex-wrap justify-center">
+      <!-- Icons -->
+      <div class="tech-card">
+        <i class="devicon-html5-plain text-6xl" ></i>
+        <p class="tech-name">HTML5</p>
       </div>
-    </section>
+      <div class="tech-card">
+        <i class="devicon-css3-plain-wordmark text-6xl" ></i>
+        <p class="tech-name">CSS3</p>
+      </div>
+      <div class="tech-card">
+        <i class="devicon-tailwindcss-plain text-6xl" ></i>
+        <p class="tech-name">TailwindCSS</p>
+      </div>
+      <div class="tech-card">
+        <i class="devicon-javascript-plain text-6xl" ></i>
+        <p class="tech-name">JavaScript</p>
+      </div>
+      <div class="tech-card">
+        <i class="devicon-typescript-plain text-6xl"></i>
+        <p class="tech-name">TypeScript</p>
+      </div>
+      <div class="tech-card">
+        <i class="devicon-react-original text-6xl"></i>
+        <p class="tech-name">React</p>
+      </div>
+      <div class="tech-card">
+        <i class="devicon-nextjs-plain text-6xl"></i>
+        <p class="tech-name">Next.js</p>
+      </div>
+      <div class="tech-card">
+        <i class="devicon-astro-plain text-6xl" ></i>
+        <p class="tech-name">Astro</p>
+      </div>
+      <div class="tech-card">
+        <i class="devicon-axios-plain text-7xl" ></i>
+        <p class="tech-name">Axios</p>
+      </div>
+      <div class="tech-card">
+        <i class="devicon-reactrouter-plain text-6xl" ></i>
+        <p class="tech-name">React Router</p>
+      </div>
+      <div class="tech-card">
+        <i class="devicon-bootstrap-plain text-6xl" ></i>
+        <p class="tech-name">Bootstrap</p>
+      </div>
+    </div>
+  </section>
 
-    <!-- Backend Section -->
-    <section
-      id="backend"
-      class="mb-16 w-[550px]"
-      data-aos="fade-right"
-      data-aos-duration="1000"
-    >
-      <h2 class="text-4xl font-extrabold mb-8 text-center text-green-400">
-        Backend
-      </h2>
-      <div class="flex gap-10 flex-wrap justify-center justify-items-center">
-        <div class="tech-card">
-          <i class="devicon-nextjs-plain text-6xl"></i>
-          <p class="tech-name">Next.js</p>
-        </div>
-        <div class="tech-card">
-          <i class="devicon-firebase-plain text-6xl"></i>
-          <p class="tech-name">Firebase</p>
-        </div>
-        <div class="tech-card">
-          <i class="devicon-supabase-plain text-6xl"></i>
-          <p class="tech-name">Supabase</p>
-        </div>
-        <div class="tech-card">
-          <i class="devicon-prisma-original text-6xl text-gray-200"></i>
-          <p class="tech-name">Prisma</p>
-        </div>
-        <div class="tech-card">
-          <i class="devicon-sqlite-plain text-6xl"></i>
-          <p class="tech-name">Sqlite</p>
-        </div>
-        <div class="tech-card">
-          <i class="devicon-java-plain text-6xl"></i>
-          <p class="tech-name">Java</p>
-        </div>
-        <div class="tech-card">
-          <i class="devicon-json-plain text-6xl"></i>
-          <p class="tech-name">JSON</p>
-        </div>
+  <!-- Backend Section -->
+  <section id="backend" class="mb-16 w-full max-w-screen-lg mx-auto" data-aos="fade-right" data-aos-duration="1000">
+    <h2 class="text-4xl font-extrabold mb-8 text-center text-green-400">Backend</h2>
+    <div class="flex gap-10 flex-wrap justify-center">
+      <div class="tech-card">
+        <i class="devicon-nextjs-plain text-6xl"></i>
+        <p class="tech-name">Next.js</p>
       </div>
-    </section>
-  </div>
+      <div class="tech-card">
+        <i class="devicon-firebase-plain text-6xl" ></i>
+        <p class="tech-name">Firebase</p>
+      </div>
+      <div class="tech-card">
+        <i class="devicon-supabase-plain text-6xl" ></i>
+        <p class="tech-name">Supabase</p>
+      </div>
+      <div class="tech-card">
+        <i class="devicon-prisma-original text-6xl text-gray-200"></i>
+        <p class="tech-name">Prisma</p>
+      </div>
+      <div class="tech-card">
+        <i class="devicon-sqlite-plain text-6xl" ></i>
+        <p class="tech-name">SQLite</p>
+      </div>
+      <div class="tech-card">
+        <i class="devicon-java-plain text-6xl" ></i>
+        <p class="tech-name">Java</p>
+      </div>
+      <div class="tech-card">
+        <i class="devicon-json-plain text-6xl"></i>
+        <p class="tech-name">JSON</p>
+      </div>
+    </div>
+  </section>
 
   <!-- Tools Section -->
-  <section
-    id="tools"
-    class="mb-16 w-[650px]"
-    data-aos="fade-left"
-    data-aos-duration="1000"
-  >
-    <h2 class="text-4xl font-extrabold mb-8 text-center text-yellow-400">
-      Tools
-    </h2>
-    <div class="flex gap-10 flex-wrap justify-center justify-items-center">
+  <section id="tools" class="mb-16 w-full max-w-screen-lg mx-auto" data-aos="fade-left" data-aos-duration="1000">
+    <h2 class="text-4xl font-extrabold mb-8 text-center text-yellow-400">Tools</h2>
+    <div class="flex gap-10 flex-wrap justify-center">
       <div class="tech-card">
-        <i class="devicon-git-plain text-6xl"></i>
+        <i class="devicon-git-plain text-6xl" ></i>
         <p class="tech-name">Git</p>
       </div>
       <div class="tech-card">
-        <i class="devicon-vitejs-plain text-6xl"></i>
+        <i class="devicon-vitejs-plain text-6xl" ></i>
         <p class="tech-name">Vite.js</p>
       </div>
       <div class="tech-card">
-        <i class="devicon-github-original text-gray-200 text-6xl"></i>
+        <i class="devicon-github-original text-gray-200 text-6xl" ></i>
         <p class="tech-name">GitHub</p>
       </div>
       <div class="tech-card">
         <i class="devicon-insomnia-plain text-6xl"></i>
-        <p class="tech-name">Insomia</p>
+        <p class="tech-name">Insomnia</p>
       </div>
       <div class="tech-card">
-        <i class="devicon-materialui-plain text-6xl"></i>
+        <i class="devicon-materialui-plain text-6xl" ></i>
         <p class="tech-name">MUI</p>
       </div>
       <div class="tech-card">
-        <i class="devicon-npm-original-wordmark text-6xl"></i>
+        <i class="devicon-npm-original-wordmark text-6xl" ></i>
         <p class="tech-name">npm</p>
       </div>
       <div class="tech-card">
-        <i class="devicon-slack-plain text-gray-200 text-6xl"></i>
+        <i class="devicon-slack-plain text-gray-200 text-6xl" ></i>
         <p class="tech-name">Slack</p>
       </div>
     </div>
@@ -161,9 +138,7 @@
     background-color: rgb(41, 41, 41);
     width: 160px;
     height: 110px;
-    transition:
-      transform 0.3s ease,
-      box-shadow 0.3s ease;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
     padding: 1rem;
     border-radius: 12px;
     color: rgba(255, 255, 255, 0.767);
@@ -180,29 +155,6 @@
   .tech-card:hover i {
     transition: color 0.3s ease;
   }
-
-  /* Mobile Layout */
- 
-  .tech-card {
-    text-align: center;
-    background-color: rgb(41, 41, 41);
-    width: 160px;
-    height: 110px;
-    transition:
-      transform 0.3s ease,
-      box-shadow 0.3s ease;
-    padding: 1rem;
-    border-radius: 12px;
-    color: rgba(255, 255, 255, 0.767);
-  }
-  .tech-card:hover {
-    transform: scale(1.1);
-  }
-
-  i {
-    color: white;
-  }
-
   .tech-card:hover i {
   transition: color 0.3s ease;
 }
@@ -303,15 +255,15 @@
   color: #4a154b; /* Color de Slack */
 }
 
-
-@media (max-width: 768px) {
+  /* Media Queries */
+  @media (max-width: 768px) {
     .tech-card {
-      width: 45%; /* Dos columnas */
+      width: 45%; /* Two columns */
       margin: 10px 0;
     }
 
     .text-6xl {
-      font-size: 3rem; /* Ajustar tamaño de los iconos en móviles */
+      font-size: 3rem; /* Adjust icon size for mobile */
     }
 
     h2 {
@@ -320,7 +272,8 @@
 
     .text-center {
       text-align: center;
+   
     }
   }
-
 </style>
+
