--- a/src/sections/SobreMi.astro
+++ b/src/sections/SobreMi.astro
@@ -1,6 +1,4 @@
-<section
-  class="flex md:flex-row-reverse items-center justify-center flex-row-reverse max-w-[1280px] m-auto"
->
+<section class="flex flex-col md:flex-row-reverse items-center justify-center max-w-[1280px] m-auto">
   <!-- Contenedor del texto -->
   <div
     class="w-full md:w-1/2 space-y-4 text-center md:text-left"
@@ -19,7 +17,7 @@
       metas profesionales.
     </p>
     <a
-      href="https://github.com/agustinperedo"
+      href="https://github.com/BernardoPer19"
       target="_blank"
       class="flex items-center space-x-2 text-white hover:text-green-400 transition-colors duration-300"
     >
@@ -30,15 +28,15 @@
 
   <!-- Contenedor de la imagen -->
   <div
-    class="w-full md:w-96 flex justify-center"
+    class="w-full md:w-96 flex justify-center mt-4 md:mt-0"
     data-aos="fade-right"
     data-aos-easing="linear"
     data-aos-duration="1000"
   >
     <img
-      src="https://www.nicepng.com/png/detail/128-1280406_view-user-icon-png-user-circle-icon-png.png"
-      alt="Imagen de perfil"
-      class="z-30 w-48 h-48 rounded-full object-cover border-4 border-white"
+      src="src/assets/caca2.jpg"
+      alt="Agustin Bernardo Peredo Rodríguez, desarrollador frontend, GitHub"
+      class="z-30 w-64 h-64 rounded-full object-cover border-4 border-white"
     />
   </div>
 </section>
